--- a/app/src/main/res/layout/timetable_activity.xml
+++ b/app/src/main/res/layout/timetable_activity.xml
@@ -3,8 +3,8 @@
     android:id="@+id/timetableActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/brightBG"
-    android:gravity="center_horizontal">
+    android:gravity="center_horizontal"
+    android:background="?attr/colorOnSecondary">
 
     <ProgressBar
         android:id="@+id/progressBar"
