--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,13 +8,16 @@
 
     <style name="Theme.VyatsuApp" parent="Base.Theme.VyatsuApp" >
         <item name="android:windowTranslucentNavigation">true</item>
-        <item name="android:fitsSystemWindows">true</item>
-        <item name="android:statusBarColor">@color/brightBlue</item>
-        <item name="android:clipToPadding">false</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="colorPrimary">@color/brightBlue</item>
         <item name="colorPrimaryDark">@color/brightBlue</item>
         <item name="android:textColorPrimary">#CE000000</item>
+        <item name="android:textColorSecondary">@color/black</item>
         <item name="android:textColor">#CE000000</item>
+        <item name="hintTextColor">@color/brightText</item>
         <item name="colorOnSecondary">@color/brightBG</item>
     </style>
 </resources>
